<!--suppress DeprecatedClassUsageInspection
    Not using androidx PreferenceCategory & PreferenceScreen to support old devices -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title = "@string/prefGroupTimer">
        <EditTextPreference android:key="workDuration"
            android:dialogTitle="@string/prefWorkDurationD"
            android:inputType="number"
            android:persistent="true"
            android:defaultValue="25"
            android:title="@string/prefWorkDuration"/>
        <EditTextPreference android:key="breakDuration"
            android:dialogTitle="@string/prefBreakDurationD"
            android:inputType="number"
            android:persistent="true"
            android:defaultValue="5"
            android:title="@string/prefBreakDuration"/>
        <EditTextPreference android:key="longBreakDuration"
            android:dialogTitle="@string/prefLongBreakDurationD"
            android:inputType="number"
            android:persistent="true"
            android:defaultValue="15"
            android:title="@string/prefLongBreakDuration"/>
        <EditTextPreference android:key="longBreakPeriodicity"
            android:dialogTitle="@string/prefLongBreakPeriodicityD"
            android:inputType="number"
            android:persistent="true"
            android:defaultValue="4"
            android:title="@string/prefLongBreakPeriodicity"/>
    </PreferenceCategory>

    <PreferenceCategory android:title = "@string/prefGroupNotification">
        <CheckBoxPreference android:key="dndMode"
            android:title="@string/prefDndMode"
            android:defaultValue="false"
            android:persistent="true"/>
        <CheckBoxPreference android:key="minidoroRingtone"
            android:title="@string/prefMinidoroRingtone"
            android:defaultValue="true"
            android:persistent="true"/>
        <RingtonePreference android:key="ringtone"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:showSilent="true"
            android:defaultValue="content://settings/system/notification_sound"
            android:title="@string/prefRingtone"
            android:persistent="true"/>
        <CheckBoxPreference android:key="overrideSilent"
            android:title="@string/prefOverrideSilent"
            android:defaultValue="false"
            android:persistent="true"/>
    </PreferenceCategory>
</PreferenceScreen>
